--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/wwwroot/index.html
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/wwwroot/index.html
@@ -6,6 +6,7 @@
 	<title>Ai Recruiter</title>
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/app.css" />
 	<link rel="stylesheet" href="Dointo.AiRecruiter.InterviewClient.styles.css" />
 	<link rel="icon" href="data:,">
